[Minor] fixes for petals flickering in waves

--- a/app/styles/sections.module.css
+++ b/app/styles/sections.module.css
@@ -23,7 +23,7 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.4);
-  z-index: 1;
+  z-index: 2;
 }
 
 .headerContent {
